# testIIS

./: README.md  data.dvc  model.py  pyproject.toml
.dvc/: config
models/: model.pkl
reports/: report.html  stability.html
src/data/: drift_report.py  process_data.py  stability_tests.py
src/models/: train_eval.py
