[tool.poetry]
name = "testiis"
version = "0.1.0"
description = ""
authors = ["nick-812 <nik.jeromel@student.um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.23.5"
dvc = "^2.56.0"
mlflow = "^2.3.1"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"
evidently = "^0.3.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
